--- a/app/views/content/login/index.phtml
+++ b/app/views/content/login/index.phtml
@@ -1,1 +1,20 @@
-login template
+<form action="/login" method="post" class="form-horizontal">
+	<input type="hidden" name="_url" value="/account">
+	<div class="form-group">
+		<label for="inputEmail" class="col-sm-2 control-label"><?php echo $this->str('EMAIL'); ?></label>
+		<div class="col-sm-10">
+			<input type="email" class="form-control" name="email" id="inputEmail" placeholder="<?php echo $this->str('EMAIL'); ?>">
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="inputPassword" class="col-sm-2 control-label"><?php echo $this->str('PASSWORD'); ?></label>
+		<div class="col-sm-10">
+			<input type="password" class="form-control" name="password" id="inputPassword" placeholder="<?php echo $this->str('PASSWORD'); ?>">
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-10">
+			<button type="submit" class="btn btn-default"><?php echo $this->str('SIGNIN'); ?></button>
+		</div>
+	</div>
+</form>
