--- a/public/css/repropark.css
+++ b/public/css/repropark.css
@@ -2,6 +2,16 @@ body {
 	background: #d9d9d9;
 }
 
+a {
+	color: #1c86af;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #666;
+	text-decoration: none;
+}
+
 .container#main {
     width: auto;
     max-width: 900px;
@@ -12,7 +22,6 @@ body {
 	width: 100%;
 	border-top: 2px solid #92c3d2;
 	border-bottom: 5px solid #0079a6;
-	padding: 0px;
 }
 
 .drop-shadow {
@@ -38,10 +47,13 @@ body {
 	height: 20px;
 }
 
+.content {
+	padding: 15px;
+	border-left: 2px dotted #92c3d2;
+}
+
 .left {
-	width: 200px;
-	padding-bottom: 100px;
-	border-right: 2px dotted #92c3d2;
+	padding: 0px;
 }
 
 .left .menu {
