--- a/app/views/layouts/base.phtml
+++ b/app/views/layouts/base.phtml
@@ -26,7 +26,7 @@
 							<?php
 								foreach (Application::$routes as $route) {
 									$active = Application::$route->name==$route->name;
-									if ($route->inMenu) echo '<li class="leaf' . ($active ? ' active-trail' : '') . '"><a href="' . $route->path . '"' . ($active ? ' class="active"' : '') . '>' . $route->name . '</a></li>';
+									if ($route->inMenu()) echo '<li class="leaf' . ($active ? ' active-trail' : '') . '"><a href="' . $route->path . '"' . ($active ? ' class="active"' : '') . '>' . $route->getValue() . '</a></li>';
 								}
 							?>
 						</ul>
