--- a/app/views/content/login/index.phtml
+++ b/app/views/content/login/index.phtml
@@ -1,5 +1,5 @@
 <form action="/login" method="post" class="form-horizontal">
-	<input type="hidden" name="_url" value="/account">
+	<input type="hidden" name="_url" value="/user">
 	<div class="form-group">
 		<label for="inputEmail" class="col-sm-2 control-label"><?php echo $this->str('EMAIL'); ?></label>
 		<div class="col-sm-10">
