--- a/app/views/content/login/index.phtml
+++ b/app/views/content/login/index.phtml
@@ -14,7 +14,7 @@
 	</div>
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
-			<button type="submit" class="btn btn-default"><?php echo $this->str('SIGNIN'); ?></button>
+			<button type="submit" class="btn btn-primary"><?php echo $this->str('SIGNIN'); ?></button>
 		</div>
 	</div>
 </form>
