--- a/app/views/content/user/add.phtml
+++ b/app/views/content/user/add.phtml
@@ -40,7 +40,7 @@
 	</div>
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
-			<button type="submit" class="btn btn-primary"><?php echo $this->str('SIGNUP'); ?></button>
+			<button type="submit" class="btn btn-primary"><?php echo $this->str('ADD'); ?></button>
 		</div>
 	</div>
 </form>
