--- a/app/views/content/user/index.phtml
+++ b/app/views/content/user/index.phtml
@@ -1,10 +1,10 @@
 <dl class="dl-horizontal">
-	<dt><?php echo $this->str('FIRSTNAME'); ?>:</dt>
+	<dt><?php echo $this->str('firstname'); ?>:</dt>
 	<dd><?php echo Application::$user->firstname; ?></dd>
-	<dt><?php echo $this->str('LASTNAME'); ?>:</dt>
+	<dt><?php echo $this->str('lastname'); ?>:</dt>
 	<dd><?php echo Application::$user->lastname; ?></dd>
-	<dt><?php echo $this->str('EMAIL'); ?>:</dt>
+	<dt><?php echo $this->str('email'); ?>:</dt>
 	<dd><?php echo Application::$user->email; ?></dd>
-	<dt><?php echo $this->str('GROUP'); ?>:</dt>
+	<dt><?php echo $this->str('group'); ?>:</dt>
 	<dd><?php echo Application::$user->group; ?></dd>
 </dl>
