--- a/app/views/content/user/index.phtml
+++ b/app/views/content/user/index.phtml
@@ -1,10 +1,8 @@
 <dl class="dl-horizontal">
-	<dt><?php echo $this->str('firstname'); ?>:</dt>
-	<dd><?php echo Application::$user->firstname; ?></dd>
-	<dt><?php echo $this->str('lastname'); ?>:</dt>
-	<dd><?php echo Application::$user->lastname; ?></dd>
-	<dt><?php echo $this->str('email'); ?>:</dt>
-	<dd><?php echo Application::$user->email; ?></dd>
-	<dt><?php echo $this->str('group'); ?>:</dt>
-	<dd><?php echo Application::$user->group; ?></dd>
+<?php
+	foreach (User::$fields_view as $field) {
+		print '<dt>' . $this->str($field) .'</dt>';
+		print '<dd>' . Application::$user->$field . '</dd>';
+	}
+?>
 </dl>
