--- a/app/views/layouts/base.phtml
+++ b/app/views/layouts/base.phtml
@@ -10,6 +10,10 @@
 		<script src="/js/jquery-1.11.3.min.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
 		<script src="/js/repropark.js"></script>
+		<?php 
+			$this->getJavascripts(); 
+			$this->getJavascriptParams();
+		?>
 		<title>Repropark</title>
 	</head>
 	<body>
