--- a/app/views/content/system/login.phtml
+++ b/app/views/content/system/login.phtml
@@ -1,20 +1,13 @@
 <form action="/login" method="post" class="form-horizontal">
-	<input type="hidden" name="_url" value="/user">
-	<div class="form-group">
-		<label for="inputEmail" class="col-sm-2 control-label"><?php echo $this->str('EMAIL'); ?></label>
-		<div class="col-sm-10">
-			<input type="email" class="form-control" name="email" id="inputEmail" placeholder="<?php echo $this->str('EMAIL'); ?>">
-		</div>
-	</div>
-	<div class="form-group">
-		<label for="inputPassword" class="col-sm-2 control-label"><?php echo $this->str('PASSWORD'); ?></label>
-		<div class="col-sm-10">
-			<input type="password" class="form-control" name="password" id="inputPassword" placeholder="<?php echo $this->str('PASSWORD'); ?>">
-		</div>
-	</div>
+	<?php 
+		print View::input('_url', 'hidden', '/user');
+		print View::input('send', 'hidden', '1');
+		print View::group('email', 'email');
+		print View::group('password', 'password');
+	?>
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
-			<button type="submit" class="btn btn-primary"><?php echo $this->str('SIGNIN'); ?></button>
+			<?php print View::input('signup', 'submit'); ?>
 		</div>
 	</div>
 </form>
