--- a/app/views/content/order/add.phtml
+++ b/app/views/content/order/add.phtml
@@ -1,8 +1,8 @@
 <form method="post" class="form-horizontal">
 	<?php 
 		print View::input('send', 'hidden', '1');
-		print View::group('jobname');
-		print View::group('jobid1c');
+		print View::formNormal('jobname');
+		print View::formNormal('jobid1c');
 	?>
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
