--- a/app/views/layouts/base.phtml
+++ b/app/views/layouts/base.phtml
@@ -4,17 +4,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="/css/repropark.css">
-		<script src="/js/jquery-1.11.3.min.js"></script>
-		<script src="/js/bootstrap.min.js"></script>
-		<script src="/js/repropark.js"></script>
+		<title><?php $this->getTitle(); ?></title>
 		<?php 
-			$this->getJavascripts(); 
-			$this->getJavascriptParams();
+			$this->getCSSfiles();
+			$this->getJSfiles(); 
+			$this->getJSparams();
 		?>
-		<title>Repropark</title>
 	</head>
 	<body>
 		<div class="blue-bg top-first-line"></div>
