--- a/app/views/layouts/base.phtml
+++ b/app/views/layouts/base.phtml
@@ -25,6 +25,7 @@
 					</div>
 					<div class="col-sm-10 content">
 						<?php 
+							$this->getWarnings();
 							$this->getErrors();
 							$this->getContent();
 						?>
