--- a/app/views/content/admin/view-as.phtml
+++ b/app/views/content/admin/view-as.phtml
@@ -1,7 +1,7 @@
 <form method="post" class="form-inline">
 	<?php print View::input('send', 'hidden', '1'); ?>
 	<div class="form-group">
-		<label class="control-label" for="input_group"><?php print Application::str('view_as'); ?></label>
+		<label class="control-label" for="input_group"><?php print View::str('view_as'); ?></label>
 	</div>
 	<div class="form-group"><?php print View::input('group', 'select', $this->groups); ?></div>
 	<div class="form-group"><?php print View::input('view', 'submit'); ?></div>
