--- a/app/views/content/system/redirect.phtml
+++ b/app/views/content/system/redirect.phtml
@@ -1,12 +1,15 @@
 <?php
 	if (!$this instanceof IRedirect) {
-		print '<div class="alert alert-danger" role="alert">' . sprintf($this->str('error_is_not_iredirect'), Application::$routes->current->name) . '</div>';
+		print '<div class="alert alert-danger" role="alert">' . sprintf(View::str('error_is_not_iredirect'), Application::$routes->current->name) . '</div>';
 		die;
 	}
 	
 	$redirect = $this->getRedirect();
+	$redirect_route = Application::$routes->byPath($redirect->url);
+	
+	if (is_null($redirect_route)) die;
 ?>
 
 <div class="alert alert-success" role="alert"><?php echo  $redirect->message; ?></div>
-<p><?php echo sprintf($this->str('redirect'), $redirect->sTimeout(), '<a href="' . $redirect->url . '">' . $this->str('here') . '</a>'); ?></p>
-<?php echo '<script type="text/javascript">redirect("' . $redirect->url . '", ' . $redirect->timeout . ');</script>'; ?>
+<p><?php echo sprintf(View::str('redirect'), $redirect->sTimeout(), View::link($redirect_route->name, View::str('here'))); ?></p>
+<?php echo '<script type="text/javascript">redirect("' . $redirect_route->path . '", ' . $redirect->timeout . ');</script>'; ?>
