--- a/app/views/layouts/base.phtml
+++ b/app/views/layouts/base.phtml
@@ -24,7 +24,8 @@
 						<?php $this->getMenu(); ?>
 					</div>
 					<div class="col-sm-10 content">
-						<?php 
+						<?php
+							$this->getBreadcrumbs();
 							$this->getWarnings();
 							$this->getErrors();
 							$this->getContent();
