--- a/app/views/content/user/index.phtml
+++ b/app/views/content/user/index.phtml
@@ -1,7 +1,7 @@
 <dl class="dl-horizontal">
 <?php
 	foreach ($this->fields as $field) {
-		print '<dt>' . $this->str($field) .'</dt>';
+		print '<dt>' . View::str($field) .'</dt>';
 		print '<dd>' . Application::$user->$field . '</dd>';
 	}
 ?>
