--- a/app/views/content/order/view.phtml
+++ b/app/views/content/order/view.phtml
@@ -2,20 +2,20 @@
 	<div class="form-group">
 		<div class="text-right col-sm-12"><?php print View::link('OrderEdit', null, '?id=' . $this->order->id, null, 'btn btn-success'); ?></div>
 	</div>
-	<?php 
-		print View::formStatic('title', $this->order->title);
-		print View::formStatic('user', $this->order->user);
-		print View::formStatic('id_1c', $this->order->id_1c);
-		print View::formStatic('number_1c', $this->order->number_1c);
-		print View::formStatic('status', $this->order->status);
-		print View::formStatic('photopolymer', $this->order->photopolymer);
-		print View::formStatic('form_count', $this->order->form_count);
-		print View::formStatic('area', $this->order->area);
-		print View::formStatic('urgent', $this->order->urgent);
-		print View::formStatic('angels', $this->order->angels);
-		print View::formStatic('colorproof', $this->order->colorproof);
-		print View::formStatic('date_created', $this->order->date_created);
-		print View::formStatic('date_changed', $this->order->date_changed);
-		print View::formStatic('date_due', $this->order->date_due);
-	?>
+<?php 
+	print View::formStatic('title', $this->order->title);
+	print View::formStatic('username', $this->order->username);
+	print View::formStatic('id_1c', $this->order->id_1c);
+	print View::formStatic('number_1c', $this->order->number_1c);
+	print View::formStatic('status', $this->order->status);
+	print View::formStatic('photopolymer', $this->order->photopolymer);
+	print View::formStatic('form_count', $this->order->form_count);
+	print View::formStatic('area', $this->order->area);
+	print View::formStatic('urgent', $this->order->urgent);
+	print View::formStatic('angels', $this->order->angels);
+	print View::formStatic('colorproof', $this->order->colorproof);
+	print View::formStatic('date_created', $this->order->date_created);
+	print View::formStatic('date_changed', $this->order->date_changed);
+	print View::formStatic('date_due', $this->order->date_due);
+?>
 </form>
