--- a/app/views/content/system/success-save.phtml
+++ b/app/views/content/system/success-save.phtml
@@ -1,1 +1,1 @@
-<div class="alert alert-success" role="alert"><?php echo $this->str('success_save'); ?></div>
+<div class="alert alert-success" role="alert"><?php print View::str('success_save'); ?></div>
