--- a/app/views/content/order/view.phtml
+++ b/app/views/content/order/view.phtml
@@ -1,21 +1,52 @@
-<form method="post" class="form-horizontal">
+<form class="form-horizontal">
 	<div class="form-group">
-		<div class="text-right col-sm-12"><?php print View::link('OrderEdit', null, '?id=' . $this->order->id, null, 'btn btn-success'); ?></div>
+		<div class="text-right col-sm-12">
+			<?php print View::link(Route::ORDER_EDIT, null, 'id=' . $this->order->id, null, 'btn btn-primary'); ?>&nbsp;
+			<?php if ($this->order->canCancel()) print View::link(Route::ORDER_CANCEL, null, 'id=' . $this->order->id, null, 'btn btn-warning'); ?>
+		</div>
 	</div>
-<?php 
+	<?php
 	print View::formStatic('title', $this->order->title);
-	print View::formStatic('username', $this->order->username);
+	print View::formStatic('username', View::link(Route::PROFILE, $this->order->username, 'id=' . $this->order->uid));
 	print View::formStatic('id_1c', $this->order->id_1c);
 	print View::formStatic('number_1c', $this->order->number_1c);
 	print View::formStatic('status', $this->order->status);
-	print View::formStatic('photopolymer', $this->order->photopolymer);
+	print View::formStatic('photopolymer', $this->order->photopolymer_name);
 	print View::formStatic('form_count', $this->order->form_count);
 	print View::formStatic('area', $this->order->area);
-	print View::formStatic('urgent', $this->order->urgent);
-	print View::formStatic('angels', $this->order->angels);
-	print View::formStatic('colorproof', $this->order->colorproof);
+	print View::formStatic('urgent', View::bool($this->order->urgent));
+	print View::formStatic('angels', View::bool($this->order->angels));
+	print View::formStatic('colorproof', View::bool($this->order->colorproof));
 	print View::formStatic('date_created', $this->order->date_created);
 	print View::formStatic('date_changed', $this->order->date_changed);
 	print View::formStatic('date_due', $this->order->date_due);
-?>
+	?>
 </form>
+
+<hr>
+
+<?php
+	$html = '<div id="comments">';
+	foreach ($this->comments as $comment) {
+		$html .= '<div class="panel panel-primary">';
+		$html .= '<div class="panel-heading">' . $comment->username . ' - ' . $comment->date;
+		$html .= '<div class="pull-right">' . View::link(Route::COMMENT_DELETE, '<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>', 'id=' . $comment->id) . '</div>';
+		$html .= '</div>';
+		$html .= '<div class="panel-body">' . $comment->message . '</div>';
+		$html .= '</div>';
+	}
+	$html .= '</div>';
+	print $html;
+?>
+
+
+<?php
+if ($this->commented) {
+	print '<form method="post" action="#comments" class="form-horizontal">';
+	print View::formValidate();
+	print View::input('comment', 'textarea');
+	print '<br>';
+	print View::input('submit', 'submit');
+	print '</form>';
+}
+?>
