--- a/app/views/layouts/base.phtml
+++ b/app/views/layouts/base.phtml
@@ -26,8 +26,10 @@
 					<div class="col-sm-10 content">
 						<?php
 							$this->getBreadcrumbs();
-							$this->getWarnings();
-							$this->getErrors();
+							$this->getMessages('success');
+							$this->getMessages('info');
+							$this->getMessages('warning');
+							$this->getMessages('danger');
 							$this->getContent();
 						?>
 					</div>
